fix license sync button misalignment (#2289)

--- a/web/src/scss/components/apps/AppLicense.scss
+++ b/web/src/scss/components/apps/AppLicense.scss
@@ -81,5 +81,4 @@
   overflow: scroll;
   text-overflow: ellipsis;
   white-space: nowrap;
-  width: 90%;
 }
